# dtu_mlops_group99

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  cloudbuild.yaml  cloudrun.yaml  config.yaml  index.html  link_model.py  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_frontend.txt  submit_job.py  sweep.yaml  tasks.py  train.py.py  wandb.docker
.dvc/: config
.github/workflows/: cml_data.yaml  codecheck.yaml  deploy_docs.yaml  stage_model.yaml  tests.yaml  train.yaml
api/: index.html
configs/: config.yaml
data/: processed.dvc  raw.dvc
data/processed/: 2024-wimbledon-processed.csv  test_set.csv  train_set.csv
dockerfiles/: Dockerfile  api.dockerfile  frontend.dockerfile  monitoring.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/profiling/: profile_summary.txt  training_profile_stats.txt
docs/source/: api.md  index.md
models/: requirements.txt  train.py.py
notebooks/: data.ipynb
project99/: README.md  pyproject.toml  tasks.py
project99/.devcontainer/: devcontainer.json
project99/docs/: mkdocs.yaml
reports/: README.md  report.html
search/: search_index.json
src/project99/: api.py  constants.py  data.py  dataset.py  dataset_statistics.py  evaluate.py  frontend.py  logging_utils.py  model.py  monitoring.py  monitoring_api.py  preprocess.py  profile_training.py  train.py  (+1 more)
tests/: test_api.py  test_config_params.py  test_configs.py  test_data.py  test_errors.py  test_imports.py  test_model.py  test_real_data_optional.py  test_training.py
wandb/: latest-run
(+556 files in other folders)
