[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project99"
version = "0.0.1"
description = "DTU MLOps Tennis Prediction Project"
authors = [
  { name = "DTU ML OPS GROUP 99", email = "your@email.com" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# Configured to automatically find packages in the src directory
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W"]
ignore = ["N806"]

[tool.coverage.run]
omit = ["tests/*"]


